# GEO-

./: .cleanup-plan.md  .coverage  .env.example  .gitignore  AGENTIC_AI_IMPLEMENTATION_PLAN.md  ARCHITECTURE_V3.md  CASE_STUDY.md  COPILOT_IMPLEMENTATION_PLAN.md  Dockerfile  FINAL_AUDIT_REPORT.md  IMPLEMENTATION_PLAN.md  README.md  auth.py  bloom_landing_page.html  brandsight_copilot.html  brandsight_geo_redesign.html  compare.py  dashboard.py  deploy_remediation.py  deployment_report.md  docker-compose.yml  drop.py  evaluation_dashboard.py  final_lift_report.json  fix_lints.py  geo_remediation_burger_hub.json  index.html  jsonld_deploy_instructions.md  kfc_prediction.json  landing.css  lift_report.json  measure_lift.py  meg_burger_visibility_final_report.md  meg_burger_visibility_report.md  multi_model.py  patch.py  post_remediation_audit.json  pre_remediation_audit.json  progress.txt  pyproject.toml  (+14 more)
.github/workflows/: ci.yml
.omc/: prd.json
.omc/state/: hud-stdin-cache.json
.streamlit/: config.toml
Real case study/: index.html
config/: disaster_recovery.yaml  llm_providers.yaml  meg_test_config.yaml  prometheus.yml  prometheus_alerts.yml  prometheus_rules.yml  slo.yaml
data/: anomalies_log.json  golden_set.jsonl  meg_test_100_flash_run.jsonl  meg_test_100_run.jsonl  meg_test_audit_run.jsonl  meg_test_audit_run_summary.json  meg_test_brief.jsonl  meg_test_brief_summary.json  meg_test_final_run.jsonl  meg_test_final_run_summary.json  raw_audit_log.jsonl  training_data.csv
docs/: 9_10_STATUS.md  CREDENTIAL_INCIDENT.md  GEMINI_PAKISTAN_SME_CASE_STUDY.md  GEMINI_VALIDATION_RUNBOOK.md  IMPLEMENTATION_SCORECARD.md  IMPLEMENTATION_STATUS_2026-07-19.md  SECURITY_AUDIT.md  SME_AGENCY_PRODUCT_STRATEGY.md
geo_audit_agent/: agent.py  audit.py  create_review_snippet.py  generate_json_ld.py  geo_remediation_tools.py  llm_client.py  llm_clients.py  measurement.py  mock_competitor_data.py  remediation.py  requirements.txt
geo_audit_agent/actions/: mapper.py  registry.py  tracker.py
geo_audit_agent/agent/: __init__.py  graph.py  nodes.py  state.py  tools.py
geo_audit_agent/agents/: __init__.py  action_agent.py  inspector_agent.py  unified_competitor_agent.py
geo_audit_agent/api/: __init__.py  app.py  auth.py  rate_limiter.py  schemas.py  security_headers.py
geo_audit_agent/auth/: user.py
geo_audit_agent/billing/: __init__.py  plans.py
geo_audit_agent/components/: __init__.py  badges.py  cards.py  progress.py
geo_audit_agent/context/: __init__.py  compression_layer.py  embeddings.py  fusion_layer.py  intent_classifier.py  prompt_builder.py  reranker.py  validation_layer.py  vector_store.py
migrations/: env.py
pages/: 1_📈_Audit_Tool.py  1_📊_Brand_Visibility.py  3_Copilot.py  3_🤖_Copilot.py  4_⚡_Action_Agent.py  5_🔍_Inspector.py  6_🧠_Agentic_Workflow.py  7_⚡_Billing.py  8_👑_Admin.py
scripts/: check_secrets.py  create_stripe_products.py  generate_report.py  predict_kfc.py  prepare_data.py  run_meg_audit_custom.py  run_meg_multi_provider_audit.py  run_meg_test.py  smoke_startup.py  train_geo_model.py  validate_gemini.py
tests/: README.md  example_dashboard_integration.py  golden_competitors.json  rls_policies.sql  secrets.toml.example  test_action_executors.py  test_action_human_gate.py  test_action_mapper.py  test_api_auth.py  test_audit_context.py  test_audit_entitlements.py  test_audit_workspace.py  test_brand_key_compatibility.py  test_cache_service.py  test_check_citation.py  test_competitor_route_security.py  test_context_pipeline.py  test_copilot.py  test_copilot_api.py  test_copilot_mock_engine.py  test_dashboard_fixes.py  test_entity_detection.py  test_evaluation.py  test_evidence_persistence.py  test_gap_analyst.py  test_generate_json_ld.py  test_geo_audit.py  test_geo_intelligence.py  test_golden_dataset.py  test_guardrail_handlers.py  test_guardrails_golden.py  test_inspector_offline.py  test_integration_langgraph.py  test_intent_classifier.py  test_llm_gateway.py  test_memory_guardrails.py  test_multi_model.py  test_nine_point_milestones.py  test_no_stub_guardrails.py  test_observation_quality.py  (+11 more)
tmp/: simulation_facebook_ads.csv  simulation_results.txt
validation_corpora/: pakistan_sme_gemini_case_study.json
(+136 files in other folders)
