[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "brandsight-geo"
version = "1.2.0"
description = "AI-Powered Generative Engine Optimization Dashboard"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30.0",
    "extra-streamlit-components",
    "plotly>=5.0.0",
    "requests>=2.28.0",
    "python-dotenv",
    "langgraph>=0.2.0",
    "pydantic",
    "tenacity",
    "anthropic>=0.52.0",
    "supabase",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["geo_audit_agent*"]

[tool.mypy]
python_version = "3.10"
# warn_return_any is off: JSON-parsing helpers legitimately return Any-derived values
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# E501: long lines allowed; B008: FastAPI Depends() in defaults is idiomatic
ignore = ["E501", "B008"]
