[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brandsight-geo"
version = "1.2.0"
description = "AI-Powered Generative Engine Optimization Dashboard"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30.0",
    "extra-streamlit-components",
    "plotly>=5.0.0",
    "requests>=2.28.0",
    "python-dotenv",
    "langgraph>=0.2.0",
    "pydantic",
    "tenacity",
    "anthropic>=0.52.0",
    "supabase",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "mypy>=1.10",
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["geo_audit_agent*"]

[tool.mypy]
python_version = "3.10"
# warn_return_any is off: JSON-parsing helpers legitimately return Any-derived values
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_site_packages = true

[[tool.mypy.overrides]]
module = "geo_audit_agent.db.models"
disable_error_code = ["call-arg"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# E501: long lines allowed; B008: FastAPI Depends() in defaults is idiomatic
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"geo_audit_agent/ui/theme.py" = ["I001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
